done with v1 homepage

--- a/index.html
+++ b/index.html
@@ -13,14 +13,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header"></header>
+    <header id="header">
+      <h1 id="headerTitle">Mini Games</h1>
+    </header>
     <div id="gameSelectorContainer">
       <div class="gameSelectorContainerItems">
-        <h1></h1>
+        <img
+          src="images/chronometer.png"
+          alt="reaction time"
+          class="gameIcons"
+        />
+        <h3 class="gameTitles">Reaction Time</h3>
       </div>
-      <div class="gameSelectorContainerItems"></div>
-      <div class="gameSelectorContainerItems"></div>
-      <div class="gameSelectorContainerItems"></div>
+      <div class="gameSelectorContainerItems">
+        <img src="images/brain.png" alt="sequence memory" class="gameIcons" />
+        <h3 class="gameTitles">Sequence Memory</h3>
+      </div>
+      <div class="gameSelectorContainerItems">
+        <img src="images/target.png" alt="aim training" class="gameIcons" />
+        <h3 class="gameTitles">Aim Training</h3>
+      </div>
+      <div class="gameSelectorContainerItems">
+        <img
+          src="images/number-blocks.png"
+          alt="number memory"
+          class="gameIcons"
+        />
+        <h3 class="gameTitles">Number Memory</h3>
+      </div>
     </div>
   </body>
 </html>
