got reaction time game to get the right amount of time that have passed but far from done

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header id="header">
       <h1 id="headerTitle">Mini Games</h1>
     </header>
     <div id="gameSelectorContainer">
-      <div class="gameSelectorContainerItems">
+      <div class="gameSelectorContainerItems" id="reactionTimeContainer">
         <img
           src="images/chronometer.png"
           alt="reaction time"
