done with reaction time game

--- a/reactionTime/reactionTime.html
+++ b/reactionTime/reactionTime.html
@@ -21,8 +21,8 @@
         id="reactionTimeImage"
       />
       <h1 id="textInReactionTime">
-        Click to begin, When the red box turns green click the button as quickly
-        as you can
+        Check your reaction time, click when box turns red
+        <br />(Start by clicking here)
       </h1>
     </div>
   </body>
