created files for sequence memory game and created basic layout for game

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         />
         <h3 class="gameTitles">Reaction Time</h3>
       </div>
-      <div class="gameSelectorContainerItems">
+      <div class="gameSelectorContainerItems" id="sequenceMemoryContainer">
         <img src="images/brain.png" alt="sequence memory" class="gameIcons" />
         <h3 class="gameTitles">Sequence Memory</h3>
       </div>
